<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/appwidget_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin">

    <ImageView
        android:id="@+id/appwidget_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/appwidget_image_desc"
        android:src="@drawable/news_placeholder"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/widget_image_scrim_content_desc"
        android:background="@drawable/black_background_scrim" />
    <TextView
        android:id="@+id/appwidget_news_headline_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/appwidget_news_date_text"
        android:layout_margin="8dp"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:text="@string/appwidget_news_headline_text"
        android:contentDescription="@string/appwidget_news_headline_text"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/appwidget_news_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/appwidget_news_date_text"
        android:contentDescription="@string/appwidget_news_date_text"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:textStyle="bold" />
</RelativeLayout>