<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/ll_loading_layout_frag"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="parent"
    app:layout_constraintLeft_toRightOf="parent"
    app:layout_constraintRight_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="parent"
    android:orientation="vertical"
    android:elevation="4dp"
    android:visibility="invisible" >
<ImageView
    android:id="@+id/img_view_error_img_frag"
    android:contentDescription="@string/loading_failed_image_content_desc"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/confused"
    android:layout_gravity="center"/>

<ProgressBar
    android:id="@+id/prg_bar_frag"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:indeterminate="true"/>

<TextView
    android:id="@+id/tv_message_ll_frag"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fontFamily="@font/raleway_black"
    android:padding="20dp"
    android:text="@string/loading_news_feeds"
    android:gravity="center"
    android:textColor="@android:color/black"
    android:textSize="25sp"
    android:textStyle="bold" />

<Button
    android:id="@+id/btn_retry_loading_frag"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/BottomSheetButtonStyle"
    android:text="@string/retry_btn_text"
    android:drawableEnd="@drawable/ic_retry_24dp"
    android:padding="10dp"
    android:layout_gravity="center"/>
</LinearLayout>